# template-tauri

./: .gitignore  LICENSE.md  README.md  biome.jsonc  index.html  package.json  tsconfig.json  vite.config.ts
.changeset/: config.json
.github/workflows/: test.yml
.husky/: pre-commit
scripts/: syncVersion.ts
src/: main.tsx  router.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo-husky/hooks/: pre-commit
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src-tauri/src/: lib.rs  main.rs
src/components/: Titlebar.tsx
src/hooks/: useTauri.ts  useUpdater.ts
src/routes/: __root.tsx  index.tsx
